[package]
name = "console-menu"
description = "A simple yet powerful library for creating beautiful console menus in rust."
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Bryn Deering"]
readme = "README.md"
keywords = ["menu", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
