[package]
name = "console-menu"
description = "A simple yet powerful library for creating beautiful console menus in rust."
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Bryn Deering"]
readme = "README.md"
homepage = "https://github.com/Bdeering1/console-menu#readme"
repository = "https://github.com/Bdeering1/console-menu"
keywords = ["menu", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
